fully-qualified-moc-types: Fix enum/enum class not being evaluated

BUG: 423780